# Embarcatech

./: README.md
led_control_webserver/: CMakeLists.txt
led_control_webserver/include/: led_control.h  temperature.h  wifi.h
led_control_webserver/lib/: web_server.c  web_server.h
led_control_webserver/src/: led_control.c  main.c  temperature.c  wifi.c
rosa_dos_ventos_adc/: CMakeLists.txt
rosa_dos_ventos_adc/src/: exercicio_adc.c
rosa_dos_ventos_adc/src/utils/joystick/: joystick.c  joystick.h
